# hass-dobiss-sx-evolution

./: .gitignore  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: lint.yml  test.yml  validate.yml
custom_components/dobiss_sx_evolution/: __init__.py  binary_sensor.py  config_flow.py  const.py  controller.py  coordinator.py  cover.py  diagnostics.py  entity.py  light.py  manifest.json  protocol.py  scene.py  sensor.py  serial_client.py  services.yaml  strings.json  switch.py  tcp_client.py
custom_components/dobiss_sx_evolution/translations/: en.json
plans/: README.md
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_controller.py  test_coordinator.py  test_cover.py  test_diagnostics.py  test_init.py  test_light.py  test_protocol.py  test_repairs.py  test_scene.py  test_sensor.py  test_serial_client.py  test_switch.py  test_tcp_client.py
