[project]
name = "hass-dobiss-sx-evolution"
version = "0.3.6"
description = "Home Assistant custom integration for DOBISS SX Evolution."
requires-python = ">=3.12"
dependencies = [
    "python-can==4.5.0",
    "pyserial==3.5",
]

[project.optional-dependencies]
dev = [
    "pytest-homeassistant-custom-component~=0.13.150",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
