[project]
name = "hass-dobiss-sx-evolution"
version = "0.3.6"
description = "Home Assistant custom integration for DOBISS SX Evolution."
requires-python = ">=3.14.2"
dependencies = [
    "python-can==4.6.1",
    "pyserial==3.5",
]

[project.optional-dependencies]
dev = [
    "pytest-homeassistant-custom-component~=0.13.336",
    "ruff>=0.11",
    "mypy>=1.15",
    "aiousbwatcher>=1.1.2",
    "serialx[esphome]>=1.8.2",
    "types-pyserial>=3.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
